--- a/Fitness-M/Представление/Тренажеры/График/FitnessEquipmentSchedule.resx
+++ b/Fitness-M/Представление/Тренажеры/График/FitnessEquipmentSchedule.resx
@@ -137,10 +137,10 @@
   </metadata>
   <data name="imageList1.ImageStream" mimetype="application/x-microsoft.net.object.binary.base64">
     <value>
-        AAEAAAD/////AQAAAAAAAAAMAgAAAFdTeXN0ZW0uV2luZG93cy5Gb3JtcywgVmVyc2lvbj0yLjAuMC4w
+        AAEAAAD/////AQAAAAAAAAAMAgAAAFdTeXN0ZW0uV2luZG93cy5Gb3JtcywgVmVyc2lvbj00LjAuMC4w
         LCBDdWx0dXJlPW5ldXRyYWwsIFB1YmxpY0tleVRva2VuPWI3N2E1YzU2MTkzNGUwODkFAQAAACZTeXN0
-        ZW0uV2luZG93cy5Gb3Jtcy5JbWFnZUxpc3RTdHJlYW1lcgEAAAAERGF0YQcCAgAAAAkDAAAADwMAAAAC
-        CAAAAk1TRnQBSQFMAwEBAAEIAQABCAEAARABAAEQAQAE/wEJAQAI/wFCAU0BNgEEBgABNgEEAgABKAMA
+        ZW0uV2luZG93cy5Gb3Jtcy5JbWFnZUxpc3RTdHJlYW1lcgEAAAAERGF0YQcCAgAAAAkDAAAADwMAAAAA
+        CAAAAk1TRnQBSQFMAwEBAAEQAQABEAEAARABAAEQAQAE/wEJAQAI/wFCAU0BNgEEBgABNgEEAgABKAMA
         AUADAAEQAwABAQEAAQgGAAEEGAABgAIAAYADAAKAAQABgAMAAYABAAGAAQACgAIAA8ABAAHAAdwBwAEA
         AfABygGmAQABMwUAATMBAAEzAQABMwEAAjMCAAMWAQADHAEAAyIBAAMpAQADVQEAA00BAANCAQADOQEA
         AYABfAH/AQACUAH/AQABkwEAAdYBAAH/AewBzAEAAcYB1gHvAQAB1gLnAQABkAGpAa0CAAH/ATMDAAFm
@@ -169,12 +169,27 @@
         AcwB/wFmAQAC/wGZAQAC/wHMAQACZgH/AQABZgH/AWYBAAFmAv8BAAH/AmYBAAH/AWYB/wEAAv8BZgEA
         ASEBAAGlAQADXwEAA3cBAAOGAQADlgEAA8sBAAOyAQAD1wEAA90BAAPjAQAD6gEAA/EBAAP4AQAB8AH7
         Af8BAAGkAqABAAOAAwAB/wIAAf8DAAL/AQAB/wMAAf8BAAH/AQAC/wIAA/8EAAEHAvACvAMHAu8B/zQA
-        AfIBkgT/AfQB8wHyAfECBwH0MgAC7wFtAfME9AHzAfIB8QFtAfgCBzAAAfMBBwH3CgABDwEHAZIwAAEH
+        AfIBkgT/AfQB8wHyAfECBwH0MgAC7wFtAfME9AHzAfIB8QFtAewCBzAAAfMBBwH3CgABDwEHAZIwAAEH
         ArwK8QHwAbwBBzAAAQcF8QXyBfEwAAG8DvQBvDAAAv8BVQz/AfcxAAEHDP8B8wH/MwAB7wT/AfQB8wHy
-        AfABvAH/NQAB8wFtAe0E7AH4AeoBBzcAAbwB/wH0AfMB8gHxAfAB9zgAAQcC/wH0AfMB8gHxAfc4AAEH
-        A/8B9AHzAfIB9zgAAQcE/wH0AfMB9zgAAQcG7wGSNAABQgFNAT4HAAE+AwABKAMAAUADAAEQAwABAQEA
-        AQEFAAGAFwAD/wEAAeABAwYAAcABAQYAAYAvAAGABwAB4AEDBgAB4AEHBgAB8AEPBgAB8AEPBgAB8AEP
-        BgAB8AEPBgAB8AEPBgAL
+        AfABvAH/NQAB8wFtAe0F7AHqAQc3AAG8Af8B9AHzAfIB8QHwAfc4AAEHAv8B9AHzAfIB8QH3OAABBwP/
+        AfQB8wHyAfc4AAEHBP8B9AHzAfc4AAEHBu8BkjQAAUIBTQE+BwABPgMAASgDAAFAAwABEAMAAQEBAAEB
+        BQABgBcAA/8BAAHgAQMGAAHAAQEGAAGALwABgAcAAeABAwYAAeABBwYAAfABDwYAAfABDwYAAfABDwYA
+        AfABDwYAAfABDwYACw==
 </value>
   </data>
+  <metadata name="clmFqTitle.UserAddedColumn" type="System.Boolean, mscorlib, Version=2.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089">
+    <value>True</value>
+  </metadata>
+  <metadata name="clmRunningTime.UserAddedColumn" type="System.Boolean, mscorlib, Version=2.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089">
+    <value>True</value>
+  </metadata>
+  <metadata name="clmCountBalls.UserAddedColumn" type="System.Boolean, mscorlib, Version=2.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089">
+    <value>True</value>
+  </metadata>
+  <metadata name="clmFreeTime.UserAddedColumn" type="System.Boolean, mscorlib, Version=2.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089">
+    <value>True</value>
+  </metadata>
+  <metadata name="clmDateToFreeTime.UserAddedColumn" type="System.Boolean, mscorlib, Version=2.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089">
+    <value>True</value>
+  </metadata>
 </root>
