--- a/Fitness-M/Представление/Клиенты/ClientsControl.resx
+++ b/Fitness-M/Представление/Клиенты/ClientsControl.resx
@@ -144,6 +144,9 @@
   <metadata name="clmNote.UserAddedColumn" type="System.Boolean, mscorlib, Version=2.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089">
     <value>True</value>
   </metadata>
+  <metadata name="clmDigitalCard.UserAddedColumn" type="System.Boolean, mscorlib, Version=2.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089">
+    <value>True</value>
+  </metadata>
   <metadata name="contextMenuClient.TrayLocation" type="System.Drawing.Point, System.Drawing, Version=2.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a">
     <value>298, 17</value>
   </metadata>
@@ -154,8 +157,8 @@
     <value>
         AAEAAAD/////AQAAAAAAAAAMAgAAAFdTeXN0ZW0uV2luZG93cy5Gb3JtcywgVmVyc2lvbj00LjAuMC4w
         LCBDdWx0dXJlPW5ldXRyYWwsIFB1YmxpY0tleVRva2VuPWI3N2E1YzU2MTkzNGUwODkFAQAAACZTeXN0
-        ZW0uV2luZG93cy5Gb3Jtcy5JbWFnZUxpc3RTdHJlYW1lcgEAAAAERGF0YQcCAgAAAAkDAAAADwMAAABi
-        FAAAAk1TRnQBSQFMAgEBDAEAATgBAAE4AQABEAEAARABAAT/AQkBAAj/AUIBTQE2AQQGAAE2AQQCAAEo
+        ZW0uV2luZG93cy5Gb3Jtcy5JbWFnZUxpc3RTdHJlYW1lcgEAAAAERGF0YQcCAgAAAAkDAAAADwMAAAAi
+        FQAAAk1TRnQBSQFMAgEBDQEAAUgBAAFIAQABEAEAARABAAT/AQkBAAj/AUIBTQE2AQQGAAE2AQQCAAEo
         AwABQAMAAUADAAEBAQABCAYAARAYAAGAAgABgAMAAoABAAGAAwABgAEAAYABAAKAAgADwAEAAcAB3AHA
         AQAB8AHKAaYBAAEzBQABMwEAATMBAAEzAQACMwIAAxYBAAMcAQADIgEAAykBAANVAQADTQEAA0IBAAM5
         AQABgAF8Af8BAAJQAf8BAAGTAQAB1gEAAf8B7AHMAQABxgHWAe8BAAHWAucBAAGQAakBrQIAAf8BMwMA
@@ -183,66 +186,69 @@
         AcwBAAH/AZkB/wEAAf8BzAIAAf8BzAEzAQAB/wHMAWYBAAH/AcwBmQEAAf8CzAEAAf8BzAH/AQAC/wEz
         AQABzAH/AWYBAAL/AZkBAAL/AcwBAAJmAf8BAAFmAf8BZgEAAWYC/wEAAf8CZgEAAf8BZgH/AQAC/wFm
         AQABIQEAAaUBAANfAQADdwEAA4YBAAOWAQADywEAA7IBAAPXAQAD3QEAA+MBAAPqAQAD8QEAA/gBAAHw
-        AfsB/wEAAaQCoAEAA4ADAAH/AgAB/wMAAv8BAAH/AwAB/wEAAf8BAAL/AgAD//8A/wD/AP8AFwABGwJ6
-        AlIBSwEqAUsBGggAAfQK8wH0BAABBwLwArwDBwLvAf8UAAF6AZoBGgKaAXkBdAJSASoBIwEpAUsBGgMA
-        C/8B8wMAAfIBkgT/AfQB8wHyAfECBwH0AgAB8wy8AfADAAGaA3oCUgFLASoDSwNSAwAL/wHzAgAC7wFt
-        AfME9AHzAfIB8QFtAfgCBwEAAfEM9AHwAwABUgF6AZoBGgKaAXkBdAJSAiMBSwFSAwAL/wHzAQAB8wEH
-        AfcKAAEPAQcBkgEAAfEM9AHwAwABGwJ6AlIBSwEqAUsBdAF6AUsBdAJSAwAL/wHzAQABBwK8CvEB8AG8
-        AQcBAAHxDPQB8AMAAXoBeQFSA0sBdANSASMBKgFLAVIDAAv/AfMBAAEHBfEF8gXxAQAB8Az0AbwBAAGZ
-        AXoBmgF6AVMBTAIqAUwBUgF6AVIBTAF0AlIDAAv/AfMBAAG8DvQBvAEAAfAM9AG8AQABdAGaAqAEegFZ
-        AUsBUgEqAUsBKgFLAVIDAAv/AfMBAAL/AVUM/wH3AQAB8AX0B/8BvAEAAVIDoAF6AaABmgF6AaADUgF5
-        AXQCUgMAC/8B8wIAAQcM/wHzAf8BAAG8DP8BvAIAARoBUgR6AXkCUgFMAVIBSwEqAUsBUgMAC/8B8wQA
-        Ae8E/wH0AfMB8gHwAbwB/wMAAbwM/wG8CAABWQGaARoCmgF5AXQCUgMAC/8B8wQAAfMBbQHtBOwB+AHq
-        AQcEAAG8DO8BBwgAA3oCUgFLASoBSwFSAwAL/wHzBQABvAH/AfQB8wHyAfEB8AH3BQAB8wK8CvABBwgA
-        AXoBmgEaApoBeQF0AlIDAAj/AfMB8QG8Af8FAAEHAv8B9AHzAfIB8QH3GwABmgKgApoBoAN6AwAJ/wHx
-        AfQGAAEHA/8B9AHzAfIB9xsAAVIBegGgAZoCegGaAcMBUgMAB/8B8wHyAfMB/wYAAQcE/wH0AfMB9x0A
-        AfMDGgHzBQAI7wH0Af8HAAEHBu8Bkg0AAv8JAAH/AfQB8gLwAfIB9AYAA/8B8wHyAfACvAHwAfIB8wH0
-        A/8FAAH/AZIB8AG8AfkBRgIAAUYBQQH/BgAD9AHyAfAB9AcAAfQCvAHwAfIB8wHyAfEBvAH0BgAB/wEH
-        Ae0BkgLvAfcB7QLvBwAC7wHzAfQBRwcgAwAC9AHyA/ABBwG0AbwB9AUAAfMBBwG8AfAC8gH0Af8B9AHy
-        AQcB8wUAAf8B8AHvAQcBvAHwAQcB7wEHAe8FAAH/AfIBvAHxAfIB8wH/BiADAAH0AfMCuwG1BbQBBwH0
-        AwAB9AEHA7wB8gHzAfQB/wH0Af8B9AEHAfQEAAH/AfICBwG8AfABvAEHAfABBwUAAfECvAHwAfEB8wH0
-        Af8BIAIfASAB8QMAAfMFuwS0AbUB8wIAAf8BBwS8AfAB8gHzAfQD/wHyAQcEAAH/AfICBwG8AfABvAEH
-        AfABBwQAAe8B8AO8AfAB8gHzAR4EIAEeAgAB/we7A7UB8wH0AgAB9AW8AfAB8QHyAfMB9AH/AvQBBwH0
-        AwAB/wHyAu8BvAHwAQcB7wG8Ae8EAAH3AvADvAHxAQ4CIAFBAfkCIAEOAQAB/wEJArsBvAP/AfEBuwL0
-        AwACvALwBbwB8gHzA/QC8QMAAf8B8gLvAQcB8AEHAe8B8AHvAwAB9AG8AfEB8AO8AfABAALjAvQC4wIA
-        Bf8DAAHzAf8FAAEHAbwB8AHxAfABvAEHAu8DvAHwAfMB8gG8AwAB/wHyAgcBvAHwAQcB7wHxAe8DAAHv
-        AbwC8gHwArwB7wHsAUYCBwG8AfMB6QHvBAAC9AHwAf8CAAH0AwcB9AEAAQcBvAHwAvIB8AG8AQcB7wK8
-        AvAB8QHwAbwDAAH/Ae8BvAXzAe8B8QMAAgcE8gK8Ae8BvAHwAfEC8gHzAe8DAAH0AfMBuwG1A/IBBwO0
-        AfMBAAK8BfIEvAPwAbwB8QQAAQcB8gUAAe8B9AMAAf8BBwbyBLwC8AHyAewCAAH0AfIGuwG1ArQBuwH0
-        AQAB8wEHAfEE8gXwArwBBwH0BAABBwHyBQAB7wH0BAAB9wPzA/IBvAHxBPAB9wH/AgAB9AEJB7sBtQG7
-        AfMB9AEAAf8CBwTyAfABvAPwAbwCBwH/BAAB8AHvBQAB7wH/BAAB8AEHAfME8gG8AfED8AG8AfcDAAL0
-        AQkGuwEIAfMB9AMAAfMBvAHwA/IB8AG8AvACvAEHAfQFAAH/AQcB8wMAAe8BBwYAAfQBBwHzA/IBvATw
-        AfEFAAL0AQkBCAX0BgAB8wIHAfEB8gK8AfACvAEHAfMHAAHzAfIC7QEHAfEB/wcAAfQBBwHzAvIB8ALx
-        AfAB8QH/BwAB/wHxAfQLAAHzBAcCvAIHAfQJAAH/AfIBvAHzCgAB8AH3BAcB7wEHGAAB/wHzAbwCBwG8
-        AfMB/xoAAf8B7wH3AfQJAAL0DAAB7wHwAfIB8wH0Af8B9A4AAf8B9AGRBYsBtAHzAwAC9A0AAfQBlAFv
-        AfQHAAH0AwAB9AGZARsB9ALzAfQB/wH0Af8LAAHxA4sBbAIuAUkBiwG1AgAB9AGUAW8B9AcAAfQEAAGT
-        ARYBRwHzBgAB9AF0BAACmQEbAfQB/wP0Af8C9AkAAa4DiwFPAVYBCAEuAWwB8QIAAZMBFgFHAfMGAAH0
-        AXQEAAGTAUYBJQHyBQAB9AFvAfIEAAEaAZoBWAH0AQAC9Ab/BwABkAOLAU8BVwEIATUBbAH0AgABkwFG
-        ASUB8gUAAfQBbwHyBAAB9AIgAUYB9AQAARoBTAH0BAAB9AJ6AZoEAAH0Bf8DAAH0AQgBmAWLAVABVgFP
-        AYsB/wIAAfQCIAFGAfQEAAEaAUwB9AUAAZMCIAG8Af8CAAHzASYBBwYAAZkCegH0BQAD9AIAAf8BmAMu
-        AWwDiwGtA4sBtAQAAZMCIAG8Af8CAAHzASYBBwcAAW8CIAHyAQAB9AFHAXQB9AYAAfQBeQJ6Af8JAAH/
-        AVADLwFQA4sBrQKLAa0B8wUAAW8CIAHyAQAB9AFHAXQB9AgAAW8BIAFGAf8BIAElAfQIAAEaAqAB8woA
-        AVAENQF4AbQBcwEcAa4BswH0BwABbwEgAUYB/wEgASUB9AkAAf8BkwMgARoB/wgAAf8BmQGgAXoKAAF4
-        AVYBUAJWAf8EHAH0CAAB/wGTAyABGgH/CQAB9AGTAyAB9AoAAfMBegGgAZoJAAH0AhwBcwHzAf8BvAHv
-        ARwBvAkAAfQBkwMgAfQIAAH0ARoBFwElASABlAEgAUYB8QkAAf8BGgHDARwB/wgAAfQBBwEcAfABAAHz
-        AbwBBwHtAW0B8AYAAfQBGgEXASUBIAGUASABRgHxBgAB8gGUAeMBRwEmAZQBAAH0AW8BRgEaAfQIAAH0
-        AgcBmAH/BwAB8wEHAe0BbQH/AfABBwGSAW0BEQHtBQAB8gGUAeMBRwEmAZQBAAH0AW8BRgEaAfQDAAH/
-        Ab0BlAEWAeMBkwQAARoBbwGUAfMB9AcAAQgBFQHtAfMHAAG8AeoCFQHzAeoBFQFDAREBQwGSBAAB/wG9
-        AZQBFgHjAZMEAAEaAW8BlAHzAfQCAAEaAb0BGgH0BwABGgG9AfQHAAH/AQcB7wGZAfQGAAH0Ae8B6wEH
-        Af8B8QHqAhUBEwHyBQABGgG9ARoB9AcAARoBvQH0GAAB/wFFAW8B9AwAAf8C8AH0VAABQgFNAT4HAAE+
-        AwABKAMAAUADAAFAAwABAQEAAQEGAAECFgAD/4EAAv8BwAEfAeABAQHgAQMC/wHAAQAB4AEBAcABAQGA
-        AQEBwAEAAeABAQGAAQABgAEBAcABAAHgAQECAAGAAQEBwAEAAeABAQIAAYABAQHAAQAB4AEBAgABgAEB
-        AgAB4AEBAgABgAEBAgAB4AEBAgABgAEBAgAB4AEBAYABAAGAAQEBgAEAAeABAQHgAQMBgAEBAf4BAAHg
-        AQEB4AEHAYABAQH+AQAB4AEBAfABDwGAAQEB/gEAAeABAQHwAQ8C/wH+AQAB4AEDAfABDwL/Af4BAAHg
-        AQMB8AEPA/8BgwHgAQcB8AEPAf8BnwHwAR8BgAEAAfgBGAH8AQ8B4AEHAeABBwHwAQAB4AEHAcABAwHg
-        AQcBwAEBAcABAwGAAQEB4AEHAcABAQHAAQMBAAEBAeABBwGAAQEBgAEDAgAB4AEHAYABAAGAAQcCAAHg
-        AQcCAAGDAZ8CAAHgAQcCAAHwAcECAAHgAQcCAAHgAQECAAHzAecCAAHAAQECAAHzAecBgAEAAcABAQIA
-        AfMB5wGAAQEBwAEDAYABAQHxAc8BwAEDAeABDwHAAQMB+AEPAeABAwH4Af8B4AEHAfwBPwHwAQ8C/wHw
-        AQ8C/wH8AT8B5wH/AYAB/wH8AQAB5wH/AcMB+wGAAR8B/AEAAcMB+wHDAfMBwAEHAfwBAAHDAfMBwwHj
-        AcIBAQH8AQABwwHjAcEB4wHDAcAB4AEAAcEB4wHgAccB4QHxAYABAQHgAccB8AGHAeAB/wGAAQEB8AGH
-        AfgBDwHwAf8BwAEDAfgBDwH4AQ8B8AH/AcABBwH4AQ8B+AEfAfgBfwHAAQ8B+AEfAeABDwH4AT8BwgEH
-        AeABDwHAAYMB/AEfAcABBwHAAYMBgQHgAf4BHwHAAQcBgQHgAcMB+AH+AQ8BwAEHAcMB+AP/AQ8B/wEP
-        Cv8L
+        AfsB/wEAAaQCoAEAA4ADAAH/AgAB/wMAAv8BAAH/AwAB/wEAAf8BAAL/AgAD/4IADv8yAAX0BvMD8gH/
+        MQAG9AfzAfIB/zEAAfQB8gHzAfIB8wfyAfEB8wH/MQAB/wH1CPQE8wH/MQAC/wH1A/QE8wMHAfMB/zEA
+        Af8G9AfzAf8xAAPtBuwC+APrAf8xAATrBG0C6gISAhMB/zEAAvgD6wVtAuoCEgH/MQAB8wr/AfUC9AH/
+        /wADAAEbAnoCUgFLASoBSwEaCAAB9ArzAfQEAAEHAvACvAMHAu8B/xQAAXoBmgEaApoBeQF0AlIBKgEj
+        ASkBSwEaAwAL/wHzAwAB8gGSBP8B9AHzAfIB8QIHAfQCAAHzDLwB8AMAAZoDegJSAUsBKgNLA1IDAAv/
+        AfMCAALvAW0B8wT0AfMB8gHxAW0B7AIHAQAB8Qz0AfADAAFSAXoBmgEaApoBeQF0AlICIwFLAVIDAAv/
+        AfMBAAHzAQcB9woAAQ8BBwGSAQAB8Qz0AfADAAEbAnoCUgFLASoBSwF0AXoBSwF0AlIDAAv/AfMBAAEH
+        ArwK8QHwAbwBBwEAAfEM9AHwAwABegF5AVIDSwF0A1IBIwEqAUsBUgMAC/8B8wEAAQcF8QXyBfEBAAHw
+        DPQBvAEAAZkBegGaAXoBUwFMAioBTAFSAXoBUgFMAXQCUgMAC/8B8wEAAbwO9AG8AQAB8Az0AbwBAAF0
+        AZoCoAR6AVkBSwFSASoBSwEqAUsBUgMAC/8B8wEAAv8BVQz/AfcBAAHwBfQH/wG8AQABUgOgAXoBoAGa
+        AXoBoANSAXkBdAJSAwAL/wHzAgABBwz/AfMB/wEAAbwM/wG8AgABGgFSBHoBeQJSAUwBUgFLASoBSwFS
+        AwAL/wHzBAAB7wT/AfQB8wHyAfABvAH/AwABvAz/AbwIAAFZAZoBGgKaAXkBdAJSAwAL/wHzBAAB8wFt
+        Ae0F7AHqAQcEAAG8DO8BBwgAA3oCUgFLASoBSwFSAwAL/wHzBQABvAH/AfQB8wHyAfEB8AH3BQAB8wK8
+        CvABBwgAAXoBmgEaApoBeQF0AlIDAAj/AfMB8QG8Af8FAAEHAv8B9AHzAfIB8QH3GwABmgKgApoBoAN6
+        AwAJ/wHxAfQGAAEHA/8B9AHzAfIB9xsAAVIBegGgAZoCegGaAcMBUgMAB/8B8wHyAfMB/wYAAQcE/wH0
+        AfMB9x0AAfMDGgHzBQAI7wH0Af8HAAEHBu8Bkg0AAv8JAAH/AfQB8gLwAfIB9AYAA/8B8wHyAfACvAHw
+        AfIB8wH0A/8FAAH/AZIB8AG8AfkBRgIAAUYBQQH/BgAD9AHyAfAB9AcAAfQCvAHwAfIB8wHyAfEBvAH0
+        BgAB/wEHAe0BkgLvAfcB7QLvBwAC7wHzAfQBRwcgAwAC9AHyA/ABBwG0AbwB9AUAAfMBBwG8AfAC8gH0
+        Af8B9AHyAQcB8wUAAf8B8AHvAQcBvAHwAQcB7wEHAe8FAAH/AfIBvAHxAfIB8wH/BiADAAH0AfMCuwG1
+        BbQBBwH0AwAB9AEHA7wB8gHzAfQB/wH0Af8B9AEHAfQEAAH/AfICBwG8AfABvAEHAfABBwUAAfECvAHw
+        AfEB8wH0Af8BIAIfASAB8QMAAfMFuwS0AbUB8wIAAf8BBwS8AfAB8gHzAfQD/wHyAQcEAAH/AfICBwG8
+        AfABvAEHAfABBwQAAe8B8AO8AfAB8gHzAR4EIAEeAgAB/we7A7UB8wH0AgAB9AW8AfAB8QHyAfMB9AH/
+        AvQBBwH0AwAB/wHyAu8BvAHwAQcB7wG8Ae8EAAH3AvADvAHxAQ4CIAFBAfkCIAEOAQAB/wEJArsBvAP/
+        AfEBuwL0AwACvALwBbwB8gHzA/QC8QMAAf8B8gLvAQcB8AEHAe8B8AHvAwAB9AG8AfEB8AO8AfABAALj
+        AvQC4wIABf8DAAHzAf8FAAEHAbwB8AHxAfABvAEHAu8DvAHwAfMB8gG8AwAB/wHyAgcBvAHwAQcB7wHx
+        Ae8DAAHvAbwC8gHwArwB7wHsAUYCBwG8AfMB6QHvBAAC9AHwAf8CAAH0AwcB9AEAAQcBvAHwAvIB8AG8
+        AQcB7wK8AvAB8QHwAbwDAAH/Ae8BvAXzAe8B8QMAAgcE8gK8Ae8BvAHwAfEC8gHzAe8DAAH0AfMBuwG1
+        A/IBBwO0AfMBAAK8BfIEvAPwAbwB8QQAAQcB8gUAAe8B9AMAAf8BBwbyBLwC8AHyAewCAAH0AfIGuwG1
+        ArQBuwH0AQAB8wEHAfEE8gXwArwBBwH0BAABBwHyBQAB7wH0BAAB9wPzA/IBvAHxBPAB9wH/AgAB9AEJ
+        B7sBtQG7AfMB9AEAAf8CBwTyAfABvAPwAbwCBwH/BAAB8AHvBQAB7wH/BAAB8AEHAfME8gG8AfED8AG8
+        AfcDAAL0AQkGuwEIAfMB9AMAAfMBvAHwA/IB8AG8AvACvAEHAfQFAAH/AQcB8wMAAe8BBwYAAfQBBwHz
+        A/IBvATwAfEFAAL0AQkBCAX0BgAB8wIHAfEB8gK8AfACvAEHAfMHAAHzAfIC7QEHAfEB/wcAAfQBBwHz
+        AvIB8ALxAfAB8QH/BwAB/wHxAfQLAAHzBAcCvAIHAfQJAAH/AfIBvAHzCgAB8AH3BAcB7wEHGAAB/wHz
+        AbwCBwG8AfMB/xoAAf8B7wH3AfQJAAL0DAAB7wHwAfIB8wH0Af8B9A4AAf8B9AGRBYsBtAHzAwAC9A0A
+        AfQBlAFvAfQHAAH0AwAB9AGZARsB9ALzAfQB/wH0Af8LAAHxA4sBbAIuAUkBiwG1AgAB9AGUAW8B9AcA
+        AfQEAAGTARYBRwHzBgAB9AF0BAACmQEbAfQB/wP0Af8C9AkAAa4DiwFPAVYBCAEuAWwB8QIAAZMBFgFH
+        AfMGAAH0AXQEAAGTAUYBJQHyBQAB9AFvAfIEAAEaAZoBWAH0AQAC9Ab/BwABkAOLAU8BVwEIATUBbAH0
+        AgABkwFGASUB8gUAAfQBbwHyBAAB9AIgAUYB9AQAARoBTAH0BAAB9AJ6AZoEAAH0Bf8DAAH0AQgBmAWL
+        AVABVgFPAYsB/wIAAfQCIAFGAfQEAAEaAUwB9AUAAZMCIAG8Af8CAAHzASYBBwYAAZkCegH0BQAD9AIA
+        Af8BmAMuAWwDiwGtA4sBtAQAAZMCIAG8Af8CAAHzASYBBwcAAW8CIAHyAQAB9AFHAXQB9AYAAfQBeQJ6
+        Af8JAAH/AVADLwFQA4sBrQKLAa0B8wUAAW8CIAHyAQAB9AFHAXQB9AgAAW8BIAFGAf8BIAElAfQIAAEa
+        AqAB8woAAVAENQF4AbQBcwEcAa4BswH0BwABbwEgAUYB/wEgASUB9AkAAf8BkwMgARoB/wgAAf8BmQGg
+        AXoKAAF4AVYBUAJWAf8EHAH0CAAB/wGTAyABGgH/CQAB9AGTAyAB9AoAAfMBegGgAZoJAAH0AhwBcwHz
+        Af8BvAHvARwBvAkAAfQBkwMgAfQIAAH0ARoBFwElASABlAEgAUYB8QkAAf8BGgHDARwB/wgAAfQBBwEc
+        AfABAAHzAbwBBwHtAW0B8AYAAfQBGgEXASUBIAGUASABRgHxBgAB8gGUAeMBRwEmAZQBAAH0AW8BRgEa
+        AfQIAAH0AgcBmAH/BwAB8wEHAe0BbQH/AfABBwGSAW0BEQHtBQAB8gGUAeMBRwEmAZQBAAH0AW8BRgEa
+        AfQDAAH/Ab0BlAEWAeMBkwQAARoBbwGUAfMB9AcAAQgBFQHtAfMHAAG8AeoCFQHzAeoBFQFDAREBQwGS
+        BAAB/wG9AZQBFgHjAZMEAAEaAW8BlAHzAfQCAAEaAb0BGgH0BwABGgG9AfQHAAH/AQcB7wGZAfQGAAH0
+        Ae8B6wEHAf8B8QHqAhUBEwHyBQABGgG9ARoB9AcAARoBvQH0GAAB/wFFAW8B9AwAAf8C8AH0VAABQgFN
+        AT4HAAE+AwABKAMAAUADAAFAAwABAQEAAQEGAAECFgAD/wEAAv8GAAL/BgABgAEBBgABgAcAAYAHAAGA
+        BwABgAcAAYAHAAGABwABgAcAAYAHAAGABwABgAcAAv8GAAL/BgAC/wYAAv8BwAEfAeABAQHgAQMC/wHA
+        AQAB4AEBAcABAQGAAQEBwAEAAeABAQGAAQABgAEBAcABAAHgAQECAAGAAQEBwAEAAeABAQIAAYABAQHA
+        AQAB4AEBAgABgAEBAgAB4AEBAgABgAEBAgAB4AEBAgABgAEBAgAB4AEBAYABAAGAAQEBgAEAAeABAQHg
+        AQMBgAEBAf4BAAHgAQEB4AEHAYABAQH+AQAB4AEBAfABDwGAAQEB/gEAAeABAQHwAQ8C/wH+AQAB4AED
+        AfABDwL/Af4BAAHgAQMB8AEPA/8BgwHgAQcB8AEPAf8BnwHwAR8BgAEAAfgBGAH8AQ8B4AEHAeABBwHw
+        AQAB4AEHAcABAwHgAQcBwAEBAcABAwGAAQEB4AEHAcABAQHAAQMBAAEBAeABBwGAAQEBgAEDAgAB4AEH
+        AYABAAGAAQcCAAHgAQcCAAGDAZ8CAAHgAQcCAAHwAcECAAHgAQcCAAHgAQECAAHzAecCAAHAAQECAAHz
+        AecBgAEAAcABAQIAAfMB5wGAAQEBwAEDAYABAQHxAc8BwAEDAeABDwHAAQMB+AEPAeABAwH4Af8B4AEH
+        AfwBPwHwAQ8C/wHwAQ8C/wH8AT8B5wH/AYAB/wH8AQAB5wH/AcMB+wGAAR8B/AEAAcMB+wHDAfMBwAEH
+        AfwBAAHDAfMBwwHjAcIBAQH8AQABwwHjAcEB4wHDAcAB4AEAAcEB4wHgAccB4QHxAYABAQHgAccB8AGH
+        AeAB/wGAAQEB8AGHAfgBDwHwAf8BwAEDAfgBDwH4AQ8B8AH/AcABBwH4AQ8B+AEfAfgBfwHAAQ8B+AEf
+        AeABDwH4AT8BwgEHAeABDwHAAYMB/AEfAcABBwHAAYMBgQHgAf4BHwHAAQcBgQHgAcMB+AH+AQ8BwAEH
+        AcMB+AP/AQ8B/wEPCv8L
 </value>
   </data>
   <metadata name="contextMenuVisit.TrayLocation" type="System.Drawing.Point, System.Drawing, Version=2.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a">
